--- a/Views/Faculty/Index.cshtml
+++ b/Views/Faculty/Index.cshtml
@@ -17,8 +17,8 @@
                 <td> @item.Name</td>
                 <td> @item.Director</td>
                 <td>
-                    @* <a asp-action="Update" asp-route-id="@item.Id" class="btn btn-primary">Edit</a> *@
-                    @* <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a> *@
+                    <a asp-action="Update" asp-route-id="@item.Id" class="btn btn-primary">Edit</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
         }
